templates/azure/cloudera/shared-resources-existing-vnet.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.1",
  "parameters": {
    "resourceAPIVersion":{
      "type":"string"
    },
    "location": {
      "type": "string"
    },
    "networkSpec": {
      "type": "object"
    },
    "masterNodeASName": {
      "type": "string"
    },
    "dataNodeASName": {
      "type": "string"
    }
  },
  "variables": {},
  "resources": [
    {
      "apiVersion": "[parameters('resourceAPIVersion')]",
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[parameters('masterNodeASName')]",
      "location": "[parameters('location')]",
      "properties": {}
    },
    {
      "apiVersion": "[parameters('resourceAPIVersion')]",
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[parameters('dataNodeASName')]",
      "location": "[parameters('location')]",
      "properties": {}
    },
    {
      "apiVersion": "[parameters('resourceAPIVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(parameters('networkSpec').virtualNetworkName, '-sg')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "description": "Allows SSH traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "HDFS.Web.UI",
            "properties": {
              "description": "Allows HDFS Web UI traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "50070",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "Hiveserver2",
            "properties": {
              "description": "Allows Hiveserver traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "10000",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "Hive.Metastore",
            "properties": {
              "description": "Allows Hive Metastore traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "9083",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 103,
              "direction": "Inbound"
            }
          },
          {
            "name": "Hue",
            "properties": {
              "description": "Allows Hue traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8888",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 104,
              "direction": "Inbound"
            }
          },
          {
            "name": "YARN.ResourceManager",
            "properties": {
              "description": "Allows YARN Resource Manager traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8088",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "YARN.JobHistory.Server",
            "properties": {
              "description": "Allows YARN JobHistory Server traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "19888",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 106,
              "direction": "Inbound"
            }
          },
          {
            "name": "Oozie.Server",
            "properties": {
              "description": "Allows Oozie Server traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "11000",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 107,
              "direction": "Inbound"
            }
          },
          {
            "name": "Management.Web.UI",
            "properties": {
              "description": "Allows Management.Web.UI traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "7180",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 108,
              "direction": "Inbound"
            }
          },
          {
            "name": "Navigator",
            "properties": {
              "description": "Allows Navigator traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "7187",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 109,
              "direction": "Inbound"
            }
          },
          {
            "name": "HDFS.dn.Web.UI",
            "properties": {
              "description": "Allow HDFS Web UI traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "50075",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "YARN.nm.Web.UI",
            "properties": {
              "description": "Allow YARN Web UI traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8042",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 111,
              "direction": "Inbound"
            }
          },
          {
            "name": "Impala.JDBC",
            "properties": {
              "description": "Allow Impala JDBC traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "21050",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 112,
              "direction": "Inbound"
            }
          },
          {
            "name": "Impala.Shell",
            "properties": {
              "description": "Allow Impala Shell traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "21000",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 113,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ]
}
